--- a/src/components/tripStats/tripStats.scss
+++ b/src/components/tripStats/tripStats.scss
@@ -2,11 +2,11 @@
 
 .trip-stat {
   position: relative;
-  width: 320px;
+  /* width: 320px; */
   background: white;
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
   border-radius: 8px;
-  box-shadow: 5px 10px 18px gray;
+  box-shadow: 5px 10px 18px grey;
 }
 .ts-form {
   padding: 20px 5px 0 20px;
@@ -43,7 +43,7 @@
   background-color: white;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: 2px solid gray;
+  // border: 2px solid gray;
   width: 320px;
   height: auto;
   padding: 20px 10px 10px 20px;
