--- a/src/styles/add-accommodation.scss
+++ b/src/styles/add-accommodation.scss
@@ -8,10 +8,7 @@
     $primaryLight,
     $primaryColor
   );
-  width: 80vw;
-  height: 100vh;
-  position: absolute;
-  right: 0;
+  // height: 100vh;
   z-index: -1;
   text-align: center;
 }
