--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,9 +1,9 @@
 .dashboard {
-  position: relative;
-  width: 80vw;
-  height: 100vh;
-  float: right;
-  top: 6rem;
+  // position: relative;
+  // width: 80vw;
+  // height: 100vh;
+  // float: right;
+  // top: 6rem;
   overflow: scroll;
 
   &__left-dash {
@@ -11,7 +11,8 @@
     height: fit-content;
   }
   &__right-dash {
-    position: absolute;
+    // position: absolute;
+    float: right;
     right: 0;
     margin-top: 5px;
     margin-right: 20px;
@@ -52,7 +53,8 @@
 .current-trip,
 .trips-stats {
   border-radius: 8px;
-  box-shadow: 5px 10px 18px gray;
+  // box-shadow: 5px 10px 18px gray;
+  box-shadow: 1px 1px 4px grey;
   padding-bottom: 40px;
   height: fit-content;
 }
