--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -25,6 +25,9 @@
     margin: 0px 46px 0px 46px;
     border-radius: 0 0 8px 8px;
   }
+  .dash-title{
+    color: yellowgreen;
+  }
 }
 
 .total-trips-title {
