--- a/src/components/tripStats/tripStats.scss
+++ b/src/components/tripStats/tripStats.scss
@@ -6,8 +6,13 @@
   background: white;
   /* border: 2px solid gray; */
   border-radius: 8px;
-  box-shadow: 5px 10px 18px grey;
+  box-shadow: 5px 10px 18px gray;
+  .dash-title{
+    color: unset;
+    color: yellowgreen;
+  }
 }
+
 .ts-form {
   padding: 20px 5px 0 20px;
   // text-align: center;
@@ -35,9 +40,6 @@
   color: $primaryColor;
 }
 
-.trip-stat .title {
-  background-color: yellowgreen;
-}
 
 .most-travelled-div {
   background-color: white;
