--- a/src/components/home-nav/HomeNav.scss
+++ b/src/components/home-nav/HomeNav.scss
@@ -1,4 +1,5 @@
 @import '../../styles/App.scss';
+@import '../../styles/cssgrid';
 
 /*home-nav styling*/
 
@@ -35,7 +36,7 @@
 .home-link {
   text-decoration: none;
   @media screen and (max-width: 480px) {
-  margin-left: 40px;
+    margin-left: 40px;
   }
   &:hover {
     background: none;
@@ -81,6 +82,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  @include work-until(sm) {
+    flex: 1.3 1;
+  }
 }
 
 .profile-action {
@@ -146,6 +150,10 @@
   margin-right: 2rem;
   z-index: 1;
   background-color: $primaryColor;
+  @include work-until(sm) {
+    width: 42%;
+    margin-right: 0;
+  }
 }
 .block {
   display: block;
