--- a/src/components/side-bar/sidebar.scss
+++ b/src/components/side-bar/sidebar.scss
@@ -16,7 +16,7 @@
     position: absolute;
     width: 80%;
     z-index: 999;
-    margin-top: 0rem !important;
+    margin-top: 11rem !important;
   }
   .main-nav {
     list-style: none;
@@ -75,6 +75,7 @@
   margin: 23px 0px 0px 10px;
   color: $background;
   display: none;
+  z-index: 999;
   @media screen and (max-width: 480px) {
     display: block;
   }
