--- a/src/components/feedback/Feedback.scss
+++ b/src/components/feedback/Feedback.scss
@@ -6,7 +6,7 @@
   background-color: white;
   margin: 5rem 1rem;
   padding: 30px;
-  width: 60%;
+  width: inherit;
   box-shadow: 0.5px 1px 2px 0px rgba(153, 153, 153, 0.5);
   // add media screen
   @include work-until(sm) {
