--- a/src/styles/add-accommodation.scss
+++ b/src/styles/add-accommodation.scss
@@ -11,6 +11,7 @@
   // height: 100vh;
   z-index: -1;
   text-align: center;
+  margin-left: 20vw;
 }
 
 .book {
@@ -54,6 +55,7 @@
   .section-book {
     top: 0;
     width: 100%;
+    margin-left: 0;
     display: block;
   }
   .book {
