--- a/src/styles/components/_composition.scss
+++ b/src/styles/components/_composition.scss
@@ -1,17 +1,22 @@
 .composition {
   position: relative;
+  width: 50%;
 
   &__photo {
-    width: 55%;
+    width: 65%;
     border-radius: 2px;
     box-shadow: 0 1.5rem 4rem rgba($black, 0.4);
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     transition: all 0.2s;
-    outline-offset: 2rem;
+    outline-offset: .2rem;
+    right: 25%;
+    top: 10%;
 
     &--acc {
+      cursor: pointer;
       width: inherit;
+      height: 200px;
     }
 
     &--p1 {
@@ -30,7 +35,7 @@
     }
 
     &:hover {
-      outline: 1.5rem solid $primaryColor;
+      // outline: .5rem solid $primaryColor;
       transform: scale(1.05) translateX(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($black, 0.5);
       z-index: 20;
