--- a/src/components/table/PanelHeader.scss
+++ b/src/components/table/PanelHeader.scss
@@ -57,6 +57,10 @@
       font-size: 0.9em;
       color: $primaryColor;
       float: left;
+      padding: 0px 5px 0px 5px;
+      @media screen and (max-width: 480px) {
+        padding: 0px;
+      }
       &:hover {
         background-color: $primaryColor;
         color: $background;
